hours/_includes/style.css
:root {
	--week-seconds-elapsed: -604800s; /* will be updated by JS */

	--open-animation-delay: calc(0s - var(--week-seconds-elapsed));

	--today: 0;
	--background-today: rgb(240 240 240);
	--background-day: rgb(255 255 255);

	--open: 0;
	--background-open: rgb(220 255 220);
	--background-closed: rgb(255 255 255);

	interpolate-size: allow-keywords;
}

body {
	padding: 8px 10px;

	width: fit-content;
	min-width: 100%;
}

/* full height for divs in cells - height chain hack */
table {
	height: 100%;
	tr { height: 100%; }
	td {
		height: 100%;
		> div { height: 100%; }
	}
}

table#opening-hours {
	margin: 0 auto;

	border-spacing: 0;
	border: 2px solid rgb(190 190 190);

	th, td {
		border: 1px solid rgb(190 190 190);
		padding: 6px 8px;
		text-align: center;
	}

	th.venue {
		min-width: 9em;
	}
	th.day, td.day {
		min-width: 12em;
	}

	/* venue hyperlinks */
	th.venue:has(a) {
		padding: 0;

		a {
			display: block;
			padding: 6px 8px;

			color: unset;
			text-decoration: unset;

			@media(hover: hover) and (pointer: fine) {
				&:hover {
					text-decoration: underline;
				}
			}
		}
	}

	/* sticky column headers */
	thead {
		position: sticky;
		top: 0;
		z-index: 5;

		th, td {
			background-color: white;
		}
	}

	/* sticky row headers */
	th.venue {
		position: sticky;
		left: 0;
		z-index: 4;
	}

	/* section headers */
	tr.section-header {
		th {
			background-color: rgb(245 245 245);

			div {
				max-width: calc(100vw - 60px);
				position: sticky;
				left: 30px;
			}
		}
	}

	tr.venue .day:nth-child(2) { --day: 1; }
	tr.venue .day:nth-child(3) { --day: 2; }
	tr.venue .day:nth-child(4) { --day: 3; }
	tr.venue .day:nth-child(5) { --day: 4; }
	tr.venue .day:nth-child(6) { --day: 5; }
	tr.venue .day:nth-child(7) { --day: 6; }
	tr.venue .day:nth-child(8) { --day: 0; }
	tr.venue .day {
		--day-animation-delay: calc(0s
			- var(--week-seconds-elapsed)
			+ var(--day) * 86400s  /* align 0 with the selected day */
			+ 4 * 3600s            /* make days start at 4am */
			- 604800s              /* ensure it's always negative (animation started) */
		);
	}

	/* column header - highlight today */
	th.day {
		animation: day 604800s var(--day-animation-delay) step-end infinite;
		animation-play-state: paused;
		background-color: color-mix(in srgb, var(--background-day), var(--background-today) calc(var(--today) * 100%));
	}

	tbody tr.venue {
		/* row header - highlight today */
		th {
			animation: var(--venue) 604800s var(--open-animation-delay) step-end infinite;
			animation-play-state: paused;
			background-color: color-mix(in srgb, var(--background-closed), var(--background-open) calc(var(--open) * 100%));
		}

		/* cells - highlight open/today */
		td {
			animation: var(--venue) 604800s var(--open-animation-delay) step-end infinite,
				day 604800s var(--day-animation-delay) step-end infinite;
			animation-play-state: paused, paused;
			--background-color: color-mix(in srgb,
				var(--background-closed),
				color-mix(in srgb,
					var(--background-today),
					var(--background-open) calc(var(--open) * 100%)
				) calc(var(--today) * 100%)
			);
			background-color: var(--background-color);
		}
	}

	/* 12h/24h clock format switching */
	tbody div.opening-hours {
		body:has(input#use-time-24h:checked) & div.time-12h { display: none; }
		body:not(:has(input#use-time-24h:checked)) & div.time-24h { display: none; }
	}

	/* happy hours */
	tbody {
		/* make sure it's readable with the icon underneath */
		div.opening-hours, div.happy-hours {
			position: relative;
			z-index: 1;
			-webkit-text-stroke: 5px color-mix(in srgb, var(--background-color), transparent 30%);
			paint-order: stroke fill;

			/* workaround for https://issues.chromium.org/issues/41433814 */
			s { text-decoration-color: rgb(0 0 0); }
		}
		::selection {
			-webkit-text-stroke: unset;
		}

		div.happy-hours {
			/* text style */
			text-align: left;
			span.offer-time, span.offer-name { color: rgb(80 80 80); }
			span.offer-name { font-style: oblique; }

			margin-top: 10px;
			max-width: 15em;
			max-height: 15lh;
			opacity: 1;
			overflow: clip;

			transition: 0.5s; /* backwards compatibility */
			transition: 0.5s allow-discrete;
			transition-property: opacity, display, max-width, max-height, margin-top;
			transition-timing-function: linear;

			body:not(:has(input#show-happy-hours:checked)) & {
				display: none;
				margin-top: 0;
				max-width: 11em;
				max-height: 0;
				opacity: 0;
			}

			@supports (interpolate-size: allow-keywords) {
				transition-timing-function: ease;
				max-height: fit-content;
			}

			@starting-style {
				margin-top: 0;
				max-width: 11em;
				max-height: 0;
				opacity: 0;
			}
		}

		/* "discount" icon */
		td {
			position: relative;

			div.happy-hours-icon {
				position: absolute;
				z-index: 0;

				bottom: 1px;
				right: 1px;

				img {
					opacity: 0.5;
					display: block;

					transition: opacity 0.5s;

					body:not(:has(input#show-happy-hours:checked)) & {
						opacity: 0.3;
					}
				}
			}
		}
	}

	tr#time-machine-row {
		body:not(:has(input#show-time-machine:checked)) & {
			display: none;
		}

		td {
			div {
				display: flex;
				flex-direction: column;
			}

			input#time-machine {
				position: sticky;
				left: 10px;
				width: min-content;
			}
		}
	}

	tfoot {
		/* TODO: visually separate from tbody */
		th {
			font-weight: initial;
			background-color: rgb(255 255 255);

			button {
				display: inline;
				padding: 0;

				border: none;
				background-color: initial;

				font-style: oblique;
				text-decoration: underline;

				cursor: pointer;
			}
		}
	}
}

footer {
	position: sticky;
	left: 10vw;
	width: 80vw;
	margin: 20px 0;
	text-align: center;
	border-top: 1px solid rgb(200 200 200);

	a {
		color: rgb(0, 0, 238);
		text-decoration-color: rgb(0, 0, 238);
	}

	p#warning-time-zone-mismatch {
		color: rgb(200, 0, 0);
	}
}

div#location-indicator {
	position: fixed;
	bottom: 20px;
	left: 20px;
	z-index: 1000;

	padding: 6px 8px;
	border-radius: 10px;
	background: rgba(255, 255, 255, 0.9);
	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);

	transition: 0.5s; /* backwards compatibility */
	transition: 0.5s allow-discrete;
	transition-property: opacity, display;

	@starting-style { opacity: 0; }
	&.hidden { opacity: 0; display: none; }

	.pin {
		display: inline-block;
		font-size: 30px;
		animation: pulse-pin 1.5s infinite ease-in-out;
	}
}

@keyframes pulse-pin {
	0% { transform: scale(1); filter: drop-shadow(0 0 0px rgba(255,0,0,0)); }
	50% { transform: scale(1.2); filter: drop-shadow(0 0 5px rgba(255,0,0,0.5)); }
	100% { transform: scale(1); filter: drop-shadow(0 0 0px rgba(255,0,0,0)); }
}

div#toolbar {
	position: sticky;
	bottom: 8px;
	z-index: 10;

	left: 10px;
	width: calc(100vw - 20px);

	pointer-events: none;

	padding-top: calc(5px + env(safe-area-inset-top));
	padding-bottom: calc(5px + env(safe-area-inset-bottom));
	padding-right: calc(5px + env(safe-area-inset-right));
	padding-left: calc(5px + env(safe-area-inset-left));

	display: flex;
	flex-direction: row-reverse;
	gap: 5px;

	input {
		display: none;
	}

	label {
		display: block;
		position: relative;

		cursor: pointer;
		user-select: none;
		pointer-events: auto;

		border: 1px solid;
		border-radius: 4px;

		transition: 0.2s;
		transition-property: background-color, border-color, box-shadow;

		border-color: rgb(200 200 200);
		background: rgb(245 245 245);
		box-shadow: inset 1px 1px 4px rgba(255 255 255);

		input:checked + & {
			background-color: rgb(215 215 215);
			border-color: rgb(180 180 180);
			box-shadow: inset 1px 1px 4px rgba(180 180 180);
		}

		@media(hover: hover) and (pointer: fine) {
			&:hover, input:checked + &:hover {
				background: rgb(230 230 230);
			}
		}

		img {
			display: block;
			margin: 10px;
		}

		&[for="use-time-24h"] {
			div {
				height: calc(10px + 25px + 10px);
				width: calc(10px + 25px + 10px);
				overflow: clip;

				text-align: center;
				line-height: calc(10px + 25px + 10px);

				font-weight: bold;
				font-size: 20px;

				position: relative;
				z-index: 12;
			}

			div.use-time-24h-icon {
				position: absolute;
				top: 0;
				left: 0;
				z-index: 11;

				font-size: 25px;
			}

			body:has(input#use-time-24h:checked) & div.time-12h { display: none; }
			body:not(:has(input#use-time-24h:checked)) & div.time-24h { display: none; }
		}
	}
}

@keyframes day {
	0%       { --today: 1; }
	14.2857% { --today: 0; }
}

